<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="518dp"
        android:layout_height="68dp"
        android:layout_marginTop="4dp"
        android:background="#000000"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/my_profile"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Image"
        android:layout_width="0dp"
        android:layout_height="178dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        tools:srcCompat="@drawable/pic" />

    <TextView
        android:id="@+id/name"
        android:layout_width="371dp"
        android:layout_height="64dp"
        android:layout_marginTop="47dp"
        android:gravity="center_vertical"
        android:text="@string/prabikjot_singh"
        android:textColor="#D50000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-condensed-light"
        app:layout_constraintBottom_toTopOf="@+id/student_Id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Image" />

    <TextView
        android:id="@+id/student_Id"
        android:layout_width="372dp"
        android:layout_height="61dp"
        android:gravity="center_vertical"
        android:text="@string/t00653726"
        android:textColor="#64DD17"
        android:textSize="21sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-condensed-light"
        app:layout_constraintBottom_toTopOf="@+id/Subject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/Subject"
        android:layout_width="349dp"
        android:layout_height="59dp"
        android:layout_marginStart="81dp"
        android:layout_marginLeft="81dp"
        android:layout_marginBottom="199dp"
        android:gravity="center_vertical"
        android:text="@string/computing_science_diploma"
        android:textColor="#AEEA00"
        android:textSize="23sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-condensed-light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_Id" />

    <Button
        android:id="@+id/Aboutme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="130dp"
        android:background="#000000"
        android:onClick="aboutMe"
        android:text="@string/know_about_me"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Subject" />

    <Button
        android:id="@+id/goals"
        android:layout_width="509dp"
        android:layout_height="75dp"
        android:background="#000000"
        android:onClick="myGoals"
        android:text="@string/my_goals"
        android:textColor="#F5FAF2"
        android:textColorHint="#532929"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Aboutme"
        app:layout_constraintVertical_bias="0.235" />

</androidx.constraintlayout.widget.ConstraintLayout>